<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">

    <ImageView
            app:srcCompat="@drawable/s5"
            android:id="@+id/app_icon"
            android:layout_width="192dp"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/app_name"
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/raleway_bold"
            android:textColor="#3F3F3F"
            android:textSize="40sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/email_button"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:drawableStart="@drawable/fui_ic_mail_white_24dp"
            android:drawablePadding="15dp"
            android:background="@drawable/fui_idp_button_background_email"
            android:text="@string/sign_in_with_email"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"

            app:layout_constraintEnd_toEndOf="@+id/google_button"
            app:layout_constraintStart_toStartOf="@+id/google_button"
            app:layout_constraintBottom_toTopOf="@+id/google_button"
            app:layout_constraintHorizontal_bias="1.0"/>

    <Button
            android:id="@+id/google_button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
            android:drawablePadding="15dp"
            android:background="@drawable/fui_idp_button_background_google"
            android:text="@string/sign_in_with_google"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="#808080"
            android:textAllCaps="false"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>